2007-09-25  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/playback/wait_actions.py (WaitForWindowActivate): If
	the active frame's name changes, check to see if it is the right frame.

2007-09-19  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/playback/wait_actions.py (WaitAction.__str__): Fixed
	TypeError, thanks Willie Walker!

	* macaroon/playback/sequence.py: Added "verbose" argument to 
	MacroSequence.start(). Could also be set to verbose with 
	MACAROON_VERBOSE environment variable.
	* macaroon/playback/sequence_step.py: Added PauseAction.
	* macaroon/main.py: Fixed import line.

2007-09-18  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/playback/Makefile.am: Added new files, removed old
	ones.
	* macaroon/playback/__init__.py: Import package into namesapce.
	* macaroon/playback/keypress_actions.py: New home of all keypress 
	actions.
	* macaroon/playback/keypress_mimic.py: Keeping around for backward 
	compatability.
	* macaroon/playback/playback_sequence.py: Removed.
	* macaroon/playback/sequence.py: New home of MacroSequence.
	* macaroon/playback/sequence_step.py: New home of SequenceStep and
	a few basic actions.
	* macaroon/playback/wait_actions.py: Home of WaitAction and derivatives.
	* macaroon/record/main.py: Enable focus recording by default. Be
	more careful when getApplication() returns None.
	* macaroon/record/script_factory.py: Be more careful when 
	getApplication() returns None. Change sequence import line
	according to new refactor.

2007-09-14  Eitan Isaacson  <eitan@ascender.com>

	* macaroon/record/script_factory.py: Protect against None objects
	in desktop accessible when iterating throu applications.
	* macaroon/playback/keypress_mimic.py: Make wait for focus
	actions strings more readable.
	* macaroon/playback/playback_sequence.py: Make a wait action print
	to stderr when it times out.

	* macaroon/playback/keypress_mimic.py: Added WaitForDocLoad. Made
	key_code arguments optional in key press and release