@@ -1,3 +1,8 @@
+2008-04-24  Willie Walker  <william.walker@sun.com>
+
+	* macaroon/playback/wait_actions.py: allow frame name to be
+	treated as a regular expression (bug #529442).
+
 2007-09-25  Eitan Isaacson  <eitan@ascender.com>
 
 	* macaroon/playback/wait_actions.py (WaitForWindowActivate): If
